# ocr-table-recognition

./: .gitignore  README.md  dataset_generation.ipynb  dataset_generation_fintab.ipynb  dataset_generation_icdar.ipynb  predictions_visualization.ipynb  predictions_visualization.py.ipynb  pyproject.toml  quick_start.py  requirements.txt  table_visualizer.py  training.ipynb  training.ipynb.ipynb
DataAugmentation/: augmentation.py
DataExtractor/: README.md  dataset_to_dataframe.py  downloader.py  file_finder.py  main_converter.py  maskrcnn_converter.py  visu.py  xml_handler.py  yolo_converter.py
DataExtractor/deprecated p/: main_converter.py  visu.py  yolo_converter.py
DataSplitter/: kfold.py
DataVisualization/: coco_visualizer.py  object_detection_visualization.py
output/: dataset_annotation.json  quick_start.py
