[project]
name = "ocr-table-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "pillow>=12.0.0",
    "typing>=3.10.0.0",
]
